--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -15,90 +15,102 @@
     <div class="row">
       <div class="col-md-12 testimonial">
         <div class="carousel-project owl-carousel">
+          {% for item in fan_art_items %}
           <div class="item">
             <div class="project">
               <div class="img">
-                <img src="../static/assets/img/gallery/banner-1.jpg" class="img-fluid" alt="Image">
-                <a href="../static/assets/img/gallery/banner-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+                <img src="{{ item.image }}" class="img-fluid" alt="Image">
+                <a href="{{ item.image }}" class="icon image-popup d-flex justify-content-center align-items-center">
                   <span class="icon-expand"></span>
                 </a>
               </div>
               <div class="text px-4">
-                <h3><a href="#">Gathering</a></h3>
+                <h3><a href="#">{{ item.title }}</a></h3>
                 <span>FJKT</span>
               </div>
             </div>
           </div>
+          {% endfor %}
+          {% for item in fjkt_items %}
           <div class="item">
             <div class="project">
               <div class="img">
-                <img src="../static/assets/img/gallery/banner-2.png" class="img-fluid fanartku" alt="Image">
-                <a href="../static/assets/img/gallery/banner-2.png" class="icon image-popup d-flex justify-content-center align-items-center">
+                <img src="{{ item.image }}" class="img-fluid fanartku" alt="Image">
+                <a href="{{ item.image }}" class="icon image-popup d-flex justify-content-center align-items-center">
                   <span class="icon-expand"></span>
                 </a>
               </div>
               <div class="text px-4">
-                <h3><a href="#">Freya</a></h3>
+                <h3><a href="#">{{ item.title }}</a></h3>
                 <span>Fan Art</span>
               </div>
             </div>
           </div>
+          {% endfor %}
+          {% for item in fan_art_items %}
           <div class="item">
             <div class="project">
               <div class="img">
-                <img src="../static/assets/img/gallery/banner-3.jpg" class="img-fluid" alt="Image">
-                <a href="../static/assets/img/gallery/banner-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+                <img src="{{ item.image }}" class="img-fluid" alt="Image">
+                <a href="{{ item.image }}" class="icon image-popup d-flex justify-content-center align-items-center">
                   <span class="icon-expand"></span>
                 </a>
               </div>
               <div class="text px-4">
-                <h3><a href="#">Gathering</a></h3>
+                <h3><a href="#">{{ item.title }}</a></h3>
                 <span>FJKT</span>
               </div>
             </div>
           </div>
+          {% endfor %}
+          {% for item in fjkt_items %}
           <div class="item">
             <div class="project">
               <div class="img">
-                <img src="../static/assets/img/gallery/banner-4.png" class="img-fluid fanartku" alt="Image">
-                <a href="../static/assets/img/gallery/banner-4.png" class="icon image-popup d-flex justify-content-center align-items-center">
+                <img src="{{ item.image }}" class="img-fluid fanartku" alt="Image">
+                <a href="{{ item.image }}" class="icon image-popup d-flex justify-content-center align-items-center">
                   <span class="icon-expand"></span>
                 </a>
               </div>
               <div class="text px-4">
-                <h3><a href="#">Adel</a></h3>
+                <h3><a href="#">{{ item.title }}</a></h3>
                 <span>Fan Art</span>
               </div>
             </div>
           </div>
+          {% endfor %}
+          {% for item in fan_art_items %}
           <div class="item">
             <div class="project">
               <div class="img">
-                <img src="../static/assets/img/gallery/banner-5.jpg" class="img-fluid" alt="Image">
-                <a href="../static/assets/img/gallery/banner-5.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+                <img src="{{ item.image }}" class="img-fluid" alt="Image">
+                <a href="{{ item.image }}" class="icon image-popup d-flex justify-content-center align-items-center">
                   <span class="icon-expand"></span>
                 </a>
               </div>
               <div class="text px-4">
-                <h3><a href="#">Gathering</a></h3>
+                <h3><a href="#">{{ item.title }}</a></h3>
                 <span>FJKT</span>
               </div>
             </div>
           </div>
+          {% endfor %}
+          {% for item in fjkt_items %}
           <div class="item">
             <div class="project">
               <div class="img">
-                <img src="../static/assets/img/gallery/banner-6.png" class="img-fluid fanartku" alt="Image">
-                <a href="../static/assets/img/gallery/banner-6.png" class="icon image-popup d-flex justify-content-center align-items-center">
+                <img src="{{ item.image }}" class="img-fluid fanartku" alt="Image">
+                <a href="{{ item.image }}" class="icon image-popup d-flex justify-content-center align-items-center">
                   <span class="icon-expand"></span>
                 </a>
               </div>
               <div class="text px-4">
-                <h3><a href="#">Zee</a></h3>
+                <h3><a href="#">{{ item.title }}</a></h3>
                 <span>Fan Art</span>
               </div>
             </div>
           </div>
+          {% endfor %}
         </div>
       </div>
     </div>
@@ -118,60 +130,27 @@
     <div>
       <h3 class="centered-bold" id="target-section" style="margin-bottom: 4rem;">FJKT</h3>
     </div>
-    <div class="row px-2 mt-4 gap-3" id="filterable-cards" style="margin-bottom: 3rem;">
-      <div class="row d-flex">
-        <div class="col-md-4 ftco-animate" style="margin-bottom: 3rem;">
-          <div class="blog-entry justify-content-end">
-            <a href="#" data-toggle="modal" data-target="#myModal" class="block-211 ">
-              <img src="../static/assets/img/fjkt.jpg" alt="Image" >
-            </a>                  
-            <div class="text mt-3 float-right d-block">
-              <div class="d-flex align-items-center pt-2 mb-4 topp">
-                <div class="one mr-3">
-                  <span class="day">12</span>
-                </div>
-                <div class="two">
-                  <span class="yr">2019</span>
-                  <span class="mos">March</span>
-                </div>
-              </div>
-              <h3 class="heading"><a href="#" data-toggle="modal" data-target="#myModal">Growth</a></h3>
-              <p>Lorem Ipsum</p>
-              <div class="d-flex align-items-center mt-4 meta">
-                <p class="mb-0"><a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">Comment <span class="ion-ios-arrow-round-forward"></span></a></p>
-                <p class="ml-auto mb-0">
-                  <a href="#" class="mr-2">Admin</a>
-                  <a href="#" class="meta-chat" data-toggle="modal" data-target="#commentsModal"><span class="icon-chat"></span> 3</a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        
-      </div> 
-    </div>
-  
-    <h3 class="centered-bold" id="fan-section" style="margin-bottom: 4rem;">FAN ART</h3>
     <div class="row px-2 mt-4 gap-3" id="filterable-cards">
+      {% for item in fjkt_items %}
       <div class="row d-flex">
 
         <div class="col-md-4 ftco-animate" style="margin-bottom: 3rem;">
           <div class="blog-entry justify-content-end">
             <a href="#" data-toggle="modal" data-target="#myModal" class="block-20">
-              <img src="../static/assets/img/gallery/banner-2.png" alt="Image">
+              <img src="{{ item.image }}" alt="Image">
             </a>                  
             <div class="text mt-3 float-right d-block">
               <div class="d-flex align-items-center pt-2 mb-4 topp">
                 <div class="one mr-3">
-                  <span class="day">12</span>
+                  <span class="day">{{ item.day }}</span>
                 </div>
                 <div class="two">
-                  <span class="yr">2019</span>
-                  <span class="mos">March</span>
+                  <span class="yr">{{ item.year }}</span>
+                  <span class="mos">{{ item.month }}</span>
                 </div>
               </div>
-              <h3 class="heading"><a href="#" data-toggle="modal" data-target="#myModal">Growth</a></h3>
-              <p>Lorem Ipsum</p>
+              <h3 class="heading"><a href="#" data-toggle="modal" data-target="#myModal">{{ item.title }}</a></h3>
+              <p>{{ item.description }}</p>
               <div class="d-flex align-items-center mt-4 meta">
                 <p class="mb-0"><a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">Comment <span class="ion-ios-arrow-round-forward"></span></a></p>
                 <p class="ml-auto mb-0">
@@ -184,8 +163,45 @@
         </div>
         
       </div> 
+      {% endfor %}
     </div>
-      
+  
+    <h3 class="centered-bold" id="fan-section" style="margin-bottom: 4rem;">FAN ART</h3>
+    <div class="row px-2 mt-4 gap-3" id="filterable-cards">
+      {% for item in fan_art_items %}
+      <div class="row d-flex">
+
+        <div class="col-md-4 ftco-animate" style="margin-bottom: 3rem;">
+          <div class="blog-entry justify-content-end">
+            <a href="#" data-toggle="modal" data-target="#myModal" class="block-20">
+              <img src="{{ item.image }}" alt="Image">
+            </a>                  
+            <div class="text mt-3 float-right d-block">
+              <div class="d-flex align-items-center pt-2 mb-4 topp">
+                <div class="one mr-3">
+                  <span class="day">{{ item.day }}</span>
+                </div>
+                <div class="two">
+                  <span class="yr">{{ item.year }}</span>
+                  <span class="mos">{{ item.month }}</span>
+                </div>
+              </div>
+              <h3 class="heading"><a href="#" data-toggle="modal" data-target="#myModal">{{ item.title }}</a></h3>
+              <p>{{ item.description }}</p>
+              <div class="d-flex align-items-center mt-4 meta">
+                <p class="mb-0"><a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">Comment <span class="ion-ios-arrow-round-forward"></span></a></p>
+                <p class="ml-auto mb-0">
+                  <a href="#" class="mr-2">Admin</a>
+                  <a href="#" class="meta-chat" data-toggle="modal" data-target="#commentsModal"><span class="icon-chat"></span> 3</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+      </div> 
+      {% endfor %}
+    </div>
   </div>
 </section>
 
